src/public/templates/menu/home-tab/home-tab.styles.scss
.home-tab {
  &__subtitle {
    font-size: 1.0rem;
    text-transform: uppercase;
    color: $color-darkblue;
  }

  &__title {
    font-size: 3rem;
    font-weight: 700;
    text-transform: uppercase;
    color: $color-darkblue;
  }

  @include breakpoint-tablet {
    &__subtitle {
      font-size: 1.15rem;
    }

    &__title {
      font-size: 4.5rem;
    }
  }
}

.home-tab-title {
  &__legend {
    display: block;
    width: 100%;
    line-height: 1rem;
    font-size: 1rem;
    text-transform: uppercase;
    text-align: right;
  }
}

